--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,4 @@ spring.datasource.password=password
 spring.freemarker.expose-request-attributes=true
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=update
